* Relocated word-wrap from specific elements to the root of the material page e.g added word-wrap to rich-text className so it will have effect on every situation in Muikku outside of materials as well. * Fixed wrong className in exercise button

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/buttons.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/buttons.scss
@@ -1288,7 +1288,7 @@
 }
 
 // Buttons used in Material pages
-.button--muikku-check-exercises,
+.button--muikku-submit-exercise,
 .button--muikku-show-correct-answers-button,
 .button--muikku-submit-assignment,
 .button--muikku-withdraw-assignment,
@@ -1302,7 +1302,7 @@
   }
 }
 
-.button--muikku-check-exercises {
+.button--muikku-submit-exercise {
   background: $color-exercise;
 }
 
