--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/material-page.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/material-page.scss
@@ -611,7 +611,6 @@
   margin: 4px;
   min-width: 30px;
   padding: 0 6px;
-  word-wrap: break-word;
 
   &.correct-answer {
     border: 2px solid $color-correct-answer;
